# terrarium-tapedelay

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  cmake.yml
src/: CMakeLists.txt  Constants.hpp  Delay.hpp  DspUtils.hpp  EnvelopeFollower.hpp  HysteresisProcessing.cpp  LossFilter.hpp  Makefile  Oversampler.hpp  Params.hpp  Processor.h  SmoothedValue.hpp  TapTempo.hpp  Tape.hpp  TapeAttrs.hpp  TapeDelay.cpp  main.cpp
src/CHOWTape/: HysteresisOps.h  HysteresisProcessing.h
src/hiir-1.4.0/: oversampling.txt  readme.txt
